{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 34,
  "lineage": "039dd2b6-4c6b-ae3c-16e6-f5ded961c8e7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0de216c4c73804b25",
            "domain": "vpc",
            "id": "eipalloc-0de216c4c73804b25",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-18-141-134-126.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.141.134.126",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:791360403140:internet-gateway/igw-03d5a3611a919fc79",
            "id": "igw-03d5a3611a919fc79",
            "owner_id": "791360403140",
            "vpc_id": "vpc-043c6d899ca121d72"
          },
          "dependencies": [
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0de216c4c73804b25",
            "connectivity_type": "public",
            "id": "nat-0afbb6e1729831f05",
            "network_interface_id": "eni-034dd96b6681c2eee",
            "private_ip": "10.0.0.167",
            "public_ip": "18.141.134.126",
            "subnet_id": "subnet-004d474d9a188f24f"
          },
          "dependencies": [
            "aws_eip.nateIP",
            "aws_subnet.publicsubnets",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:791360403140:route-table/rtb-0040f2a51bd2f0da2",
            "id": "rtb-0040f2a51bd2f0da2",
            "owner_id": "791360403140",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0afbb6e1729831f05",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-043c6d899ca121d72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nateIP",
            "aws_nat_gateway.NATgw",
            "aws_subnet.publicsubnets",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:791360403140:route-table/rtb-008273fa62d793ee8",
            "id": "rtb-008273fa62d793ee8",
            "owner_id": "791360403140",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03d5a3611a919fc79",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-043c6d899ca121d72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0372ddf03d44b383a",
            "route_table_id": "rtb-0040f2a51bd2f0da2",
            "subnet_id": "subnet-0f72eda8584936259"
          },
          "dependencies": [
            "aws_eip.nateIP",
            "aws_nat_gateway.NATgw",
            "aws_route_table.PrivateRT",
            "aws_subnet.privatesubnets",
            "aws_subnet.publicsubnets",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba236a46b12e5cdf",
            "route_table_id": "rtb-008273fa62d793ee8",
            "subnet_id": "subnet-004d474d9a188f24f"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.PublicRT",
            "aws_subnet.publicsubnets",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:791360403140:security-group/sg-047fb20f35c6fa330",
            "description": "Web Security Group for HTTP",
            "egress": [],
            "id": "sg-047fb20f35c6fa330",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg",
            "name_prefix": "",
            "owner_id": "791360403140",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-078d72cdeff4001bd"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:791360403140:subnet/subnet-0f72eda8584936259",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.0.192/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f72eda8584936259",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "791360403140",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-043c6d899ca121d72"
          },
          "dependencies": [
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:791360403140:subnet/subnet-004d474d9a188f24f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004d474d9a188f24f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "791360403140",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-043c6d899ca121d72"
          },
          "dependencies": [
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:791360403140:vpc/vpc-043c6d899ca121d72",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-002b3d7271c288b10",
            "default_route_table_id": "rtb-0d36e026108c10d51",
            "default_security_group_id": "sg-0517121d4139656e0",
            "dhcp_options_id": "dopt-073ab8effaba88d61",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-043c6d899ca121d72",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d36e026108c10d51",
            "owner_id": "791360403140"
          }
        }
      ]
    }
  ]
}